use autoAliases
